[gd_scene load_steps=2 format=3 uid="uid://q1m2v6wa8iya"]

[ext_resource type="Script" path="res://Resources/Components/player_detection_field.gd" id="1_ssnnm"]

[node name="PlayerDetectionField" type="Area2D"]
script = ExtResource("1_ssnnm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
